--- a/src/components/Login/index.css
+++ b/src/components/Login/index.css
@@ -11,6 +11,36 @@
   width: 60%;
 }
 
+.responsive-img {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .login-bg-image-container {
+    display: none;
+  }
+
+  .login-card-container {
+    width: 100%;
+    justify-content: none;
+    height: 100%;
+  }
+
+  .login-app-name {
+    display: none;
+  }
+
+  .login-logo {
+    display: none;
+  }
+
+  .responsive-img {
+    display: flex;
+    width: 70%;
+    align-self: flex-end;
+  }
+}
+
 .login-card {
   display: flex;
   flex-direction: column;
@@ -20,6 +50,16 @@
   box-shadow: 0px 4px 16px 0px;
   justify-content: center;
   padding: 20px;
+  border-radius: 2px;
+}
+
+@media screen and (max-width: 768px) {
+  .login-card {
+    padding: 0px;
+    justify-content: flex-start;
+    height: 100vh;
+    box-shadow: none;
+  }
 }
 
 .label {
@@ -60,24 +100,46 @@
   color: #0f172a;
   text-align: center;
   margin-bottom: 50px;
+  font-weight: 500;
 }
 
 .login-btn {
   background-color: #f7931e;
   border: none;
   border-radius: 6px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   color: #ffffff;
   width: 360px;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .login-bg-image-container {
   width: 40%;
 }
 
+.error-msg {
+  color: #ef4444;
+  font-size: 16px;
+}
+
 .login-side-img {
   height: 100%;
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .label {
+    padding-left: 25px;
+  }
+  .login-input {
+    align-self: center;
+  }
+  .login-name {
+    line-height: 0px;
+  }
+  .login-btn {
+    align-self: center;
+  }
 }
