--- a/src/components/RestaurantItem/index.css
+++ b/src/components/RestaurantItem/index.css
@@ -4,6 +4,22 @@
   margin-bottom: 20px;
 }
 
+.details-link {
+  text-decoration: none;
+}
+
+@media screen and (min-width: 576px) and (max-width: 1080px) {
+  .details-link {
+    width: 40%;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .details-link {
+    width: 30%;
+  }
+}
+
 .restaurant-item-img {
   width: 160px;
   height: 100px;
@@ -26,10 +42,9 @@
   line-height: 1px;
 }
 
-.rating-part-container {
+.rating-part-container-1 {
   display: flex;
   align-items: center;
-  line-height: 1px;
 }
 
 .rating-star-icon {
@@ -43,7 +58,8 @@
   color: #1e293b;
   font-weight: 700;
   font-size: 14px;
-  margin-right: 5px;
+  padding-top: 15px;
+  margin-right: 10px;
 }
 
 .no-reviews {
